Experimental exception handling util

--- a/rust_parse_describe/Cargo.toml
+++ b/rust_parse_describe/Cargo.toml
@@ -6,7 +6,8 @@ version = "0.0.1"
 syntex_syntax = "*"
 
 [[bin]]
-name = "rust_parse_describe"
+name = "rust_parse_describe_app"
 
 [lib]
+name = "rust_parse_describe"
 path = "src/lib.rs"
