--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,30 @@
 language: rust
+sudo: required
 
 rust:
   - stable
   - beta
   - nightly
-  
+
+os:
+  - linux
+
+cache: cargo
+
 matrix:
   allow_failures:
     - rust: nightly
-    
-script:
-  - cargo build --verbose
-  - cargo test --verbose
+
+script: cargo test -vv
+
+addons:
+  apt:
+    sources:
+      - kubuntu-backports
+
+    packages:
+      - cmake
+      - gfortran
+
+env:
+  - RUST_BACKTRACE=1
