Use ? operator instead of try!

--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -6,3 +6,4 @@ generics_indent = "Visual"
 fn_call_style = "Visual"
 combine_control_expr = false
 fn_args_paren_newline = true
+use_try_shorthand = true
