--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,8 @@ name = "rainicorn"
 version = "2.0.0"
 
 [dependencies]
-syntex_errors = "0.48.0"
-syntex_syntax = "0.48.0"
+syntex_errors = "^0.48"
+syntex_syntax = "^0.48"
 rustdt_util ="0.2.3"
 
 [[bin]]
